# lsmc-cv

./: LICENSE  README.md  lsmc-cv.cabal  stack.yaml
app/: Main.hs
src/: Diff.hs  Stock.hs
src/.stack-work/intero/: intero22836k5W.hs
