name:                lsmc-cv
version:             0.1.0.0
synopsis:            Least Square Monte Carlo with Control Variate (American Option Pricing)
description:         Please see README.md
homepage:            https://github.com/TxmszLou/lsmc-cv#readme
license:             BSD3
license-file:        LICENSE
author:              Thomas Sixuan Lou, Qingyuan Ren
maintainer:          tmzl.sx@gmail.com
copyright:           2017 Thomas Sixuan Lou, Qingyuan Ren
category:            Finance
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Stock, Diff
  build-depends:       base >= 4.7 && < 5
                     , ghc >= 8.0.1
                     , hmatrix >= 0.17.0.2
                     , math-functions >= 0.2.1.0
                     , matrix >= 0.3.5.0
                     , normaldistribution >= 1.1.0.3
                     , random >= 1.0.1.0
                     , random-fu >= 0.2.7.0
  default-language:    Haskell2010

executable lsmc-cv
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ghc >= 8.0.1
                     , lsmc-cv
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/lsmc-cv
